change structure of the index

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,11 +2,14 @@
 <!DOCTYPE hmtl>
 <html>
 
-<header>
-	<h1> Doolt </h1>
-</header>
+	<head></head>
 
 <body>
+
+	<header>
+		<h1> Doolt </h1>
+	</header>
+
 	<div>
 	<table>
 		<tr>
