change css + add checkbox + backgroung

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -12,6 +12,6 @@
 		<%= f.submit "Add", :disable_with => 'Ajout en cours
 		...'%>
 	</p>
-	<p>		<%= link_to "Retour", tasks_path %> 	 </p>
+	<p class="bouton">		<%= link_to "Retour", tasks_path %> 	 </p>
 
 	<% end%>
