--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -10,29 +10,76 @@ h1{
 
 }
 
+body{
+  background-image: url("images/back.jpg");
+  padding: 30px;
+  margin: 30px;
+}
+
 header {
   background-color: #34495e;
   height : 100px;
-  width: 70%;
+  width: 50%;
   margin: auto;
   text-align: center;
   margin-bottom: 75px;
   padding-top: 10px;
-}
-
-table, .table {
-  margin: auto;
-  text-align: center;
+  border-radius: 30px;
 }
 
 .bouton {
   background-color: grey;
-  width:70px;
+  width: 80px;
   height :20px;
   text-align: center;
   margin: auto;
+  border-radius: 20px;
 }
+
+table {
+    max-width: 1100px;
+}
+
+table,td,th {
+  margin:auto;
+  text-align: center;
+  border: 2px dashed #ecf0f1;
+  border-collapse: collapse;
+  padding: 4px 13px;
+}
+
+.show {
+  margin: auto;
+  background-color:#34495e;
+  color: #bdc3c7;
+  width: 50%;
+  margin-bottom: 75px;
+  padding: 10px 25px;
+  border-radius: 30px;
+}
+
+/* LIENS */
 
 a {
   text-decoration: none;
+  color:#ecf0f1;
 }
+
+a:hover {
+  text-decoration: none;
+  color:#bdc3c7;
+}
+
+a:active {
+  text-decoration: none;
+  color:#ecf0f1;
+}
+
+a:visited {
+  text-decoration: none;
+  color:#ecf0f1;
+}
+
+
+
+/* CHECKBOX */
