--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,35 +5,44 @@
 	<head></head>
 
 <body>
-
 	<header>
 		<h1> Doolt </h1>
 	</header>
 
-	<div class="table">
 	<table>
 		<tr>
+			<th> Done </th>
 			<th> To-Do </th>
 			<th> Description </th>
 			<th> Date de fin </th>
 			<th> Temps restants </th>
-			<th>  </th>
-			<th>  </th>
+			<th colspan="3"> Action  </th>
+
 		</tr>
 
 	<% @tasks.each do |t|%>
 		<tr>
-			<th> <%= t.task_title %> </th>
-			<th> <%= t.task_description %> </th>
-			<th> <%= t.deadline %> </th>
-			<th> <% if t.done == false %>
-				<% time = (((t.deadline.to_time - Time.now).to_i)/3600) %>
-				<p><%= time/24%>j <%= time % 24%>h</p>
-				<% end %> </th>
-			<th> <%= link_to 'Détails', task_path(t) %> </th>
-			<th> <%= link_to 'Modifier', edit_task_path(t) %> </th>
-			<th> <%= link_to 'Détruire', task_path(t), :confirm => 'Êtes-vous certain ?',
-				:method => :delete %> </th>
+			<td>
+					<%= check_box :p ,:nom,:valeur_on=>true, :valeur_off=>false %>
+					<% if check_box = true %>
+					<% t.done == true	%>
+					<% %>
+					<% %>
+					<%end%>
+			</td>
+			<td> <%= t.task_title %> </td>
+			<td> <%= t.task_description %> </td>
+			<td> <%= t.deadline %> </td>
+			<td> <% if t.done == false %>
+				<% time = ((t.deadline.to_time - Time.now).to_i) %>
+				<p><%= (time/3600) / 24 %>j <%= (time/3600) % 24%>h <%= (time/60) % 60 %>m</p>
+				<%else%>
+				<p>DONE</p>
+				<% end %>
+			</td>
+			<td> <p class="bouton"><%= link_to 'Détails', task_path(t) %> </p> </td>
+			<td> <p class="bouton"><%= link_to 'Modifier', edit_task_path(t) %> </p> </td>
+			<td> <p class="bouton"><%= link_to 'Supprimer', task_path(t), :confirm =>'Etes vous certain ?', method: :delete  %> </p> </td>
 		</tr>
 	<% end %>
 	</table>
@@ -42,6 +51,6 @@
 
 <p class= 'bouton'><%= link_to "Ajouter", new_task_path %></p>
 
-	</div>
 </body>
-<html>
+
+</html>
