--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -14,12 +14,13 @@ body{
   background-image: url("images/back.jpg");
   padding: 30px;
   margin: 30px;
+  text-align: center;
 }
 
 header {
   background-color: #34495e;
   height : 100px;
-  width: 50%;
+  width: 500px;
   margin: auto;
   text-align: center;
   margin-bottom: 75px;
@@ -37,20 +38,12 @@ header {
   padding : 5px 3px;
 }
 
-table {
-    max-width: 1100px;
-}
-
 #min-width {
   min-width: 100px;
 }
 
-table,td,th {
-  margin:auto;
-  text-align: center;
-  border: 2px dashed #ecf0f1;
-  border-collapse: collapse;
-  padding: 4px 13px;
+.align-left {
+  text-align: left;
 }
 
 .show {
@@ -58,31 +51,87 @@ table,td,th {
   background-color:#34495e;
   color: #bdc3c7;
   width: 50%;
-  margin-bottom: 75px;
+  margin-bottom: 30px;
   padding: 10px 25px;
   border-radius: 30px;
 }
+
+/* TABLEAU */
+
+.row {
+  margin:10px;
+  background-color: #2980b9;
+  padding: 5px 10px ;
+  width:550px;
+  border-radius: 20px;
+  display: inline-block;
+
+  * {
+    text-align: center;
+  }
+}
+
+.row-content {
+  display:inline-block;
+  padding: 10px;
+  margin:auto;
+  max-width: 200px;
+}
+
+.column1 {
+  display: inline-block;
+  width:20px;
+  margin: 0px 15px;
+}
+
+.column2 {
+  width:90px;
+  display: inline-block;
+
+}
+
+.column3 {
+  width:130px;
+  display: inline-block;
+
+}
+
+.column4 {
+  width:120px;
+  display: inline-block;
+
+}
+
+.column5 {
+  width:120px;
+  display: inline-block;
+
+}
+
+.column6 {
+  margin:5px;
+}
+
 
 /* LIENS */
 
 a {
   text-decoration: none;
   color:#ecf0f1;
-}
 
-a:hover {
-  text-decoration: none;
-  color:#bdc3c7;
-}
+  &:hover {
+    text-decoration: none;
+    color:#bdc3c7;
+  }
 
-a:active {
-  text-decoration: none;
-  color:#ecf0f1;
-}
-
-a:visited {
-  text-decoration: none;
-  color:#ecf0f1;
+  &:active {
+    text-decoration: none;
+    color:#ecf0f1;
+  }
+  &:visited {
+    text-decoration: none;
+    color:#ecf0f1;
+  }
 }
 
 
