--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,2 +1,19 @@
-<p> ----------  DISPONIBLE BIENTOT  ---------- </p>
-<%= link_to 'Accueil', tasks_path %>
+<div class="show">
+	<%= form_for :task, url: task_path(@task), method: :patch do |f|%>
+	<p>
+		<h3> Tâche </h3>
+		<%= f.text_field :task_title %>
+		<h4> Despcription </h4>
+		<%= f.text_area :task_description %>
+		<h4> Date d'échéance </h4>
+		<%= f.date_field :deadline %>
+	</p>
+
+	<p>
+		<%= f.submit "Modifier", data:{ disable_with: 'Modification en cours
+		...' }%>
+	</p>
+	<p class="bouton"> <%= link_to "Retour", tasks_path %> </p>
+
+	<% end%>
+</div>
