--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,55 +1,62 @@
   <!-- Affiche toutes les taches -->
 <!DOCTYPE hmtl>
 <html>
-
-	<head></head>
+	<head>
+		<%= favicon_link_tag 'notebook.ico'	%>
+	</head>
 
 <body>
 	<header>
 		<h1> Doolt </h1>
 	</header>
 
-	<table>
-		<tr>
-			<th> Done </th>
-			<th> To-Do </th>
-			<th> Description </th>
-			<th> Date de fin </th>
-			<th> Temps restants </th>
-			<th colspan="3"> Action  </th>
 
-		</tr>
+		<div class='row align-left'>
+			<div class='column1'><h3> Done </h3></div>
+			<div class='column2'><h3> To-Do </h3></div>
+			<div class='column3'><h3> Description </h3></div>
+			<div class='column4'><h3> Date de fin </h3></div>
+			<div class='column5'><h3> Temps restants </h3></div>
+		</div>
 
-	<% @tasks.each do |t|%>
-		<tr>
-			<td>
-					<%= check_box :p ,:nom,:valeur_on=>true, :valeur_off=>false %>
-					<% if check_box = true %>
-					<% t.done == true	%>
-					<% %>
-					<% %>
-					<%end%>
-			</td>
-			<td> <%= t.task_title %> </td>
-			<td> <%= t.task_description %> </td>
-			<td id = "min-width"> <%= t.deadline %> </td>
-			<% time = ((t.deadline.to_time - Time.now).to_i) %>
-			<td id = "min-width"> <% if time >= 0 %>
-				<p><%= (time/3600) / 24 %>j <%= (time/3600) % 24%>h <%= (time/60) % 60 %>m</p>
-				<%elsif	time < 0 %>
-				<p> Supposed to be done </p>
-				<%else%>
-				<p> DONE </p>
-				<% end %>
-			</td>
-			<td> <p class="bouton"><%= link_to 'Détails', task_path(t) %> </p> </td>
-			<td> <p class="bouton"><%= link_to 'Modifier', edit_task_path(t) %> </p> </td>
-			<td> <p class="bouton"><%= link_to 'Supprimer', task_path(t), method: :delete, data: { confirm: "Etes vous certain ?"} %> </p> </td>
-		</tr>
-	<% end %>
-	</table>
+			<br>
 
-<br>
+<% @tasks.each do |t|%>
+		<div class ='row align-left'>
+			<div class='column1'>
+					<div class="row-content"><%= check_box :p , :nom, :class=>"item-check", :data => { :path => t[:id] } %> </div>
+			</div>
+			<div class='column2'>
+					<div class="row-content"><%= t.task_title %> </div>
+			</div>
+			<div class='column3'>
+					<div class="row-content"><%= t.task_description %> </div>
+			</div>
+			<div class='column4'>
+					<div class="row-content" id = "min-width"> <%= t.deadline %> </div>
+			</div>
+					<% time = ((t.deadline.to_time - Time.now).to_i) %>
+			<div class='column5'>
+					<div class="row-content" id = "min-width">
+							<% if time >= 0 %>
+						<p><%= (time/3600) / 24 %>j <%= (time/3600) % 24%>h <%= (time/60) % 60 %>m</p>
+							<%elsif	time < 0 %>
+						<p> Supposed to be done </p>
+							<%else%>
+						<p> DONE </p>
+							<% end %>
+					</div>
+			</div>
+		</div>
+		<div class='column6'>
+					<div class="row-content"><p class="bouton"><%= link_to 'Détails', task_path(t) %> </p> </div>
+					<div class="row-content"><p class="bouton"><%= link_to 'Modifier', edit_task_path(t) %> </p> </div>
+					<div class="row-content"><p class="bouton"><%= link_to 'Supprimer', task_path(t), method: :delete, data: { confirm: "Etes vous certain ?"} %> </p> </div>
+		</div>
+<%end%>
+
+
+<br><br>
 
 <p class= 'bouton'><%= link_to "Ajouter", new_task_path %></p>
 
