--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -28,6 +28,25 @@ header {
   border-radius: 30px;
 }
 
+footer {
+  background-color: #34495e;
+  text-align: center;
+}
+
+.checkbox-container {
+  transition: background .5s;
+  height:14px;
+  width: 14px;
+  background-size: cover;
+  background-image: url("box-unchecked.png");
+  vertical-align: middle;
+  margin: 0 0 0 10px;
+
+  &:hover {
+      background-image: url("box-checked.png");
+   }
+}
+
 .bouton {
   background-color: #34495e;
   width: 80px;
@@ -62,7 +81,7 @@ header {
   margin:10px;
   background-color: #2980b9;
   padding: 5px 10px ;
-  width:600px;
+  width:550px;
   border-radius: 20px;
   display: inline-block;
 
@@ -76,6 +95,7 @@ header {
   padding: 10px;
   margin:auto;
   max-width: 200px;
+  vertical-align: middle;
 }
 
 .column1 {
