--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Doolt</title>
     <%= csrf_meta_tags %>
-
+    <%= favicon_link_tag 'notebook.ico'	%>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -11,4 +11,5 @@
   <body>
     <%= yield %>
   </body>
+
 </html>
