--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-h1{
+//h1{
   margin: auto;
   text-align: center;
   font-size: 5em;
@@ -10,14 +10,14 @@ h1{
 
 }
 
-body{
+//body{
   background-image: url("images/back.jpg");
   padding: 30px;
   margin: 30px;
   text-align: center;
 }
 
-header {
+//header {
   background-color: #34495e;
   height : 100px;
   width: 500px;
@@ -28,12 +28,12 @@ header {
   border-radius: 30px;
 }
 
-footer {
+//footer {
   background-color: #34495e;
   text-align: center;
 }
 
-.checkbox-container {
+//.checkbox-container {
   transition: background .5s;
   height:14px;
   width: 14px;
@@ -42,12 +42,12 @@ footer {
   vertical-align: middle;
   margin: 0 0 0 10px;
 
-  &:hover {
+  //&:hover {
       background-image: url("box-checked.png");
    }
 }
 
-.bouton {
+//.bouton {
   background-color: #34495e;
   width: 80px;
   height :20px;
@@ -57,15 +57,15 @@ footer {
   padding : 5px 3px;
 }
 
-#min-width {
+//#min-width {
   min-width: 100px;
 }
 
-.align-left {
+//.align-left {
   text-align: left;
 }
 
-.show {
+//.show {
   margin: auto;
   background-color:#34495e;
   color: #bdc3c7;
@@ -77,7 +77,7 @@ footer {
 
 /* TABLEAU */
 
-.row {
+//.row {
   margin:10px;
   background-color: #2980b9;
   padding: 5px 10px ;
@@ -85,12 +85,12 @@ footer {
   border-radius: 20px;
   display: inline-block;
 
-  * {
+  //* {
     text-align: center;
   }
 }
 
-.row-content {
+//.row-content {
   display:inline-block;
   padding: 10px;
   margin:auto;
@@ -98,57 +98,57 @@ footer {
   vertical-align: middle;
 }
 
-.column1 {
+//.column1 {
   display: inline-block;
   width:20px;
   margin: 0px 15px;
 }
 
-.column2 {
+//.column2 {
   width:90px;
   display: inline-block;
 
 }
 
-.column3 {
+//.column3 {
   width:130px;
   display: inline-block;
 
 }
 
-.column4 {
+//.column4 {
   width:120px;
   display: inline-block;
 
 }
 
-.column5 {
+//.column5 {
   width:130px;
   display: inline-block;
 
 }
 
-.column6 {
+//.column6 {
   margin:5px;
 }
 
 
 /* LIENS */
 
-a {
+//a {
   text-decoration: none;
   color:#ecf0f1;
 
-  &:hover {
+  //&:hover {
     text-decoration: none;
     color:#bdc3c7;
   }
 
-  &:active {
+  //&:active {
     text-decoration: none;
     color:#ecf0f1;
   }
-  &:visited {
+  //&:visited {
     text-decoration: none;
     color:#ecf0f1;
   }
