--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -16,7 +16,7 @@
 	      <div class="jumbotron">
 	        <h1>Découvrez Doolt</h1>
 	        <p class="lead">Doolt est une nouvelle interface vous permettant de gérer vos tâches et missions via une to-do list épurée, simple, et efficace.</p>
-	        <p><a class="btn btn-lg btn-success" href="#" role="button"><%= link_to 'Créer une nouvelle tâche !', new_task_path %></a></p>
+	        <p class="btn btn-lg btn-success" href="#" role="button"><%= link_to 'Créer une nouvelle tâche !', new_task_path %></p>
 	      </div>
 
 	      <div class="row marketing">
