--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -19,7 +19,7 @@
 	        <p class="btn btn-lg btn-success" href="#" role="button"><%= link_to 'Créer une nouvelle tâche !', new_task_path %></p>
 	      </div>
 	</div>
-		
+
 	    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 
 			<div class="row">
@@ -57,6 +57,7 @@
 								</td>
 		          </tr>
 			      </tbody>
+						<%end%>
 			    </table>
 		    </div>
 		    </div>
