--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -13,17 +13,15 @@
 	        <h3 class="text-muted">Doolt</h3>
 	      </div>
 
-	      <div class="jumbotron">
+	      <div class="doolt">
 	        <h1>Découvrez Doolt</h1>
 	        <p class="lead">Doolt est une nouvelle interface vous permettant de gérer vos tâches et missions via une to-do list épurée, simple, et efficace.</p>
-	        <p class="btn btn-lg btn-success" href="#" role="button"><%= link_to 'Créer une nouvelle tâche !', new_task_path %></p>
 	      </div>
 	</div>
 
-	    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 
 			<div class="row">
-			<div class="col-md-6">
+			<div class="col">
 			    <table class="table table-striped">
 		        <thead>
 							<tr>
