--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,13 +3,13 @@
 	<div class="container">
 
 	      <div class="header">
-	        <h1>Découvrez Doolt</h1>
-	        <p class="lead">Doolt est une nouvelle interface vous permettant de gérer vos tâches via une to-do list épurée, simple, et efficace.</p>
+	        <h1 style ='font-size:3em'>Doolt</h1>
+	        <p class="lead">Découvrez doolt : une nouvelle interface vous permettant de gérer vos tâches via une to-do list épurée, simple, et efficace.</p>
 				</div>
 				<hr/ id='hr1'>
 	</div>
 
-			<div class="row">
+				<div class='row'>
 			    <table>
 		        <thead>
 							<tr>
@@ -18,14 +18,13 @@
 								<th>Times left</th>
 								<th></th>
               </tr>
-
 		        </thead>
 
             <tbody>
 							<% @tasks.each do |t|%>
 		          <tr>
 			          <td><%= t.task_title %></td>
-		            <td style="width:350px"><%= t.task_description %></td>
+		            <td style="width:400px"><%= t.task_description %></td>
 								<td><% time = ((t.deadline.to_time - Time.now).to_i) %>
 										<% if time >= 0 %>
 											<p><%= (time/3600) / 24 %>j <%= (time/3600) % 24%>h <%= (time/60) % 60 %>m</p>
@@ -47,10 +46,11 @@
 
 			      </tbody>
 			    </table>
-		    </div>
+				</div>
+
 
 			<hr/ id='hr2'>
-				<div class="bouton">
+				<div class="bouton_accueil">
 					<%= link_to 'Ajoutez une tâche', new_task_path %>
 				</div>
 
@@ -58,7 +58,7 @@
 
 	<footer class="footer">
 		<p style='color:#95a5a6'>Développement :<span style="color:#ecf0f1"> Mathieu Harribey</span> | Github :<span style="color:#ecf0f1"> doolt </span></p>
-		<p>&copy; 2016 Company, Inc.</p>
+		<p style='color:#95a5a6'>&copy; 2016 Company, Inc.</p>
 	</footer>
 
 </body>
