--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,7 +34,7 @@ a:hover {
 }
 
 a:visited {
-  color: #bdc3c7;
+  color: #ecf0f1;
 }
 
 
@@ -46,7 +46,7 @@ a:visited {
 }
 
 #hr2 {
-  margin-top: 15px;
+  margin-top: 30px;
   width:300px;
 }
 
@@ -72,14 +72,14 @@ a:visited {
   color:#95a5a6;
 }
 
-.bouton {
+.bouton_accueil {
   font-family: 'Coda', cursive;
   background-color:#925446;
   width:150px;
   margin:auto;
+  margin-top: 40px;
   border-radius: 20px;
   padding:5px;
-  margin-top:40px;
   text-align: center;
 }
 
@@ -97,22 +97,65 @@ table{
 }
 
 th {
-  margin:15px;
+  margin: 15px;
   padding: 15px;
+
+}
+
+td {
+  padding:10px;
+  margin: 15px;
+  border-bottom: 1px solid #101010;
 }
 
 td,th {
-  padding:5px 10px;
   vertical-align: middle;
   text-align: center;
 }
 
+thead {
+  border-bottom: 1px solid #101010;
+  color:#925446;
+}
+
+.row {
+  width:900px;
+  height:100%;
+  background-color: #95a5a6;
+  margin: auto;
+  border-radius: 15px;
+}
 /* AUTRES */
+
+.bouton {
+  font-family: 'Coda', cursive;
+  background-color:#925446;
+  width:150px;
+  border-radius: 20px;
+  padding:5px;
+  text-align: center;
+  display:inline-block;
+  margin: 0px 30px;
+}
+
+.show {
+  vertical-align: middle;
+}
+
+.details {
+  width:700px;
+  height: 110%;
+  background-color: #95a5a6;
+  margin:auto;
+  margin-top: 10%;
+  padding:10px 50px;
+  border-radius: 15px;
+}
 
 footer {
   background-color: #101010;
   height:100%;
-  width: 100%;
+  width:100%;
   padding:15px;
   margin-top: 60px;
   font-size: 1.1em;
