--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,4 +1,4 @@
-<div class="show">
+<div class="details" style='text-align:center;width:370px;'>
 	<%= form_for :task, url: tasks_path do |f|%>
 	<p>
 		<h3> Tâche </h3>
@@ -13,7 +13,7 @@
 		<%= f.submit "Add", data: { disable_with: 'Ajout en cours
 		...'} %>
 	</p>
-	<p class="bouton">		<%= link_to "Retour", tasks_path %> 	 </p>
+	<p class="bouton_accueil">		<%= link_to "Retour", tasks_path %> 	 </p>
 
 	<% end%>
 </div>
