--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -119,7 +119,7 @@ thead {
 }
 
 .row {
-  width:900px;
+  width:850px;
   height:100%;
   background-color: #95a5a6;
   margin: auto;
@@ -150,6 +150,7 @@ thead {
   margin-top: 10%;
   padding:10px 50px;
   border-radius: 15px;
+  font-family: 'Roboto', sans-serif;
 }
 
 footer {
