--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,7 +1,7 @@
 <div class="details" style='text-align:center;width:370px;'>
 	<%= form_for :task, url: tasks_path do |f|%>
 	<p>
-		<h3> Tâche </h3>
+		<h3> Tache </h3>
 		<%= f.text_field :task_title %>
 		<h4> Despcription </h4>
 		<%= f.text_area :task_description %>
