--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,8 @@
 <div class='details'>
     <h2><span style="color:#925446;text-align:center">To do : </span><%= @task.task_title %></h2>
                                                 <hr/>
-    <h3><span style="color:#925446">> What exactly : </span><%= @task.task_description %></h3>
-    <h4><span style="color:#925446">Date d'échéance : </span><%= @task.deadline %></h4>
+    <h3><span style="color:#925446">What exactly : </span><%= @task.task_description %></h3>
+    <h3><span style="color:#925446">Date d'échéance : </span><%= @task.deadline %></h4>
 
     <div class='show'>
           <p class="bouton"><%= link_to 'Accueil', tasks_path %> </p>
