--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -7,7 +7,7 @@
     <div class='show'>
           <p class="bouton"><%= link_to 'Accueil', tasks_path %> </p>
           <p class="bouton"><%= link_to 'Modifier', edit_task_path %> </p>
-          <p class="bouton"><%= link_to 'Supprimer', task_path, method: :delete, data: { confirm: "Etes vous certain ?"} %> </p>
+          <p class="bouton"><%= link_to 'Supprimer', task_path, method: :delete%> </p>
     </div>
 
 </div>
