--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,7 +63,7 @@ a:visited {
   width: 50%;
   margin: auto;
   font-size: 1.4em;
-  font-family: 'Coda', cursive;
+  font-family: 'Roboto', sans-serif;
 }
 
 .lead {
@@ -119,13 +119,33 @@ thead {
 }
 
 .row {
-  width:850px;
+  width:900px;
   height:100%;
   background-color: #95a5a6;
   margin: auto;
   border-radius: 15px;
 }
 /* AUTRES */
+
+.field1, .field2{
+  background-color: #925446;
+  border-radius: 10px;
+  border:2px solid #ecf0f1;
+  color:#ecf0f1;
+  font-size:0.8em;
+}
+
+.field1 {
+  width:120px;
+  height:20px;
+  text-align: center;
+}
+
+.field2 {
+  width:350px;
+  height:70px;
+  padding:10px;
+}
 
 .bouton {
   font-family: 'Coda', cursive;
