--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,19 +1,19 @@
 <div class="details" style='text-align:center;width:370px;'>
 	<%= form_for :task, url: tasks_path do |f|%>
 	<p>
-		<h3> Tache </h3>
-		<%= f.text_field :task_title %>
-		<h4> Despcription </h4>
-		<%= f.text_area :task_description %>
+		<h3> Tâche </h3>
+		<%= f.text_field :task_title, class: 'field1' %>
+		<h4> Description </h4>
+		<%= f.text_area :task_description, class: 'field2' %>
 		<h4> Date d'échéance </h4>
-		<%= f.date_field :deadline %>
+		<%= f.date_field :deadline, class: 'field1' %>
 	</p>
 
 	<p>
 		<%= f.submit "Add", data: { disable_with: 'Ajout en cours
 		...'} %>
 	</p>
-	<p class="bouton_accueil">		<%= link_to "Retour", tasks_path %> 	 </p>
+	<p class="bouton_accueil"><%= link_to "Retour", tasks_path %></p>
 
 	<% end%>
 </div>
