--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="show">
+<div class="details" style='text-align:center;width:370px;'>
 	<%= form_for :task, url: task_path(@task), method: :patch do |f|%>
 	<p>
 		<h3> Tâche </h3>
