--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -21,7 +21,8 @@
 		        </thead>
 
             <tbody>
-							<% @tasks.each do |t|%>
+								<% @tasks.each do |t|%>
+
 		          <tr>
 			          <td><%= t.task_title %></td>
 		            <td style="width:400px"><%= t.task_description %></td>
@@ -38,6 +39,7 @@
 								 		<%= link_to 'Détails', task_path(t) %>
 							 	</td>
 							</tr>
+
 					<%end%>
 							<tr></tr>
 							<tr>
@@ -50,9 +52,15 @@
 
 
 			<hr/ id='hr2'>
+
+			<div style="text-align:center;"
 				<div class="bouton_accueil">
 					<%= link_to 'Ajoutez une tâche', new_task_path %>
 				</div>
+				<div class="bouton_accueil">
+					<%= link_to 'Se déconnecter', destroy_user_session_path, method: :delete%>
+				</div>
+			</div>
 
 <br>
 
