--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -158,6 +158,16 @@ thead {
   margin: 0px 30px;
 }
 
+ .notice {
+  font-family: 'Coda', cursive;
+  background-color:#925446;
+  margin: auto;
+  text-align: center;
+  padding:5px;
+  border-radius: 20px;
+  color:white;
+} 
+
 .show {
   vertical-align: middle;
 }
