--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -11,7 +11,7 @@
 
 	<p>
 		<%= f.submit "Add", data: { disable_with: 'Ajout en cours
-		...'} %>
+		...'}, style: 'font-size:16px;vertical-align:middle;margin-top:20px;' %>
 	</p>
 	<p class="bouton_accueil"><%= link_to "Retour", tasks_path %></p>
 
