--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -11,7 +11,7 @@
 
 	<p>
 		<%= f.submit "Modifier", data:{ disable_with: 'Modification en cours
-		...' }%>
+		...' }, style: 'font-size:16px;vertical-align:middle;margin-top:20px;'%>
 	</p>
 	<p class="bouton"> <%= link_to "Retour", tasks_path %> </p>
 
