--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,4 @@
 
-<body>
 	<div class="container">
 
 	      <div class="header">
@@ -53,14 +52,21 @@
 
 			<hr/ id='hr2'>
 
-			<div style="text-align:center;"
+			<div style="text-align:center;">
 				<div class="bouton_accueil">
 					<%= link_to 'Ajoutez une tâche', new_task_path %>
 				</div>
-				<div class="bouton_accueil">
-					<%= link_to 'Se déconnecter', destroy_user_session_path, method: :delete%>
-				</div>
-			</div>
+
+					<div class="user">
+						<div class="bouton_accueil" style='display:inline-block'>
+							<%= link_to 'Modifier mon compte', edit_user_registration_url%>
+						</div>
+
+						<div class="bouton_accueil" style="display:inline-block">
+							<%= link_to 'Se déconnecter', destroy_user_session_path, method: :delete%>
+						</div>
+					</div>
+		  </div>
 
 <br>
 
@@ -68,5 +74,3 @@
 		<p style='color:#95a5a6'>Développement :<span style="color:#ecf0f1"> Mathieu Harribey</span> | Github :<span style="color:#ecf0f1"> doolt </span></p>
 		<p style='color:#95a5a6'>&copy; 2016 Company, Inc.</p>
 	</footer>
-
-</body>
