--- a/app/views/users/mailer/password_change.html.erb
+++ b/app/views/users/mailer/password_change.html.erb
@@ -1,5 +1,5 @@
 <div class='details'>
-<p>Hello <%= @resource.email %>!</p>
+<p>Bonjour <%= @resource.email %>!</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+<p>Nous vous contactons pour vous informer que votre mot de passe à bien été changé.</p>
 </div>
