--- a/app/views/users/mailer/unlock_instructions.html.erb
+++ b/app/views/users/mailer/unlock_instructions.html.erb
@@ -1,9 +1,9 @@
 <div class='details'>
-<p>Hello <%= @resource.email %>!</p>
+<p>Bonjour <%= @resource.email %>!</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p>Votre compte à été bloqué suite à plusieurs échecs de connexion.</p>
 
-<p>Click the link below to unlock your account:</p>
+<p>Cliquez sur le lien ci-dessous pour débloquer votre compte.</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to 'Unlock', unlock_url(@resource, unlock_token: @token) %></p>
 </div>
