--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,16 +1,16 @@
-<div class='details'>
-<h2>Forgot your password?</h2>
+<div class='details' style='text-align:center;width:400px;'>
+<h2>Mot de passe oublié ?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, autofocus: true, class: 'field3' %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Envoyer un mail de modification" ,style: 'font-size:16px;vertical-align:middle;margin-top:20px;' %>
   </div>
 <% end %>
 
