--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,12 +1,12 @@
-<div class='details'>
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class='details' style='text-align:center;width:400px;'>
+<h2>Modifier mes informations </h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, autofocus: true, class: 'field3' %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -14,33 +14,32 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.label :password, 'Mot de passe' %> <i>(Facultatif)</i><br />
+    <%= f.password_field :password, autocomplete: "off", class: 'field3' %>
     <% if @minimum_password_length %>
       <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
     <% end %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.label :password_confirmation, 'Confirmation' %><i>(Facultatif)</i><br />
+    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'field3' %>
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
+    <%= f.label :current_password, 'Mot de passe actuel' %><br />
+    <%= f.password_field :current_password, autocomplete: "off", class: 'field3' %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
+    <%= f.submit "Mettre à jour", style: 'font-size:16px;vertical-align:middle;margin-top:20px;' %>
+  </div><br/>
 <% end %>
 
-<h3>Cancel my account</h3>
+<hr />
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<h3>Pas satisfait ? <%= button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Etes-vous sur?" }, method: :delete %></h3>
 
-<%= link_to "Back", :back %>
+<%= link_to "Retour", :back %>
 
 </div>
