--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,30 +1,31 @@
-<div class='details'>
-  
-<h2>Sign up</h2>
+
+<div class='details' style='text-align:center;width:400px;'>
+
+<h2 class='title'>S'enregistrer</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, autofocus: true, class: 'field3' %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :password,'Mot de passe' %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off", class: 'field3' %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.label :password_confirmation, 'Confirmation' %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'field3' %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Créer mon compte", style: 'font-size:16px;vertical-align:middle;margin-top:20px;' %>
   </div>
 <% end %>
 
