--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -1,7 +1,7 @@
 
 <%- if controller_name != 'sessions' %>
 <div class='bouton_auth'>
-  <%= link_to "Se conecter", new_session_path(resource_name) %><br />
+  <%= link_to "Se connecter", new_session_path(resource_name) %><br />
 </div>
 <% end -%>
 
