--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,7 +60,7 @@ a:visited {
   text-align: center;
   height: 100%;
   vertical-align: middle;
-  padding:20px;
+  padding:0px 20px 20px 20px;
 
 }
 
@@ -191,7 +191,6 @@ thead {
   font-family: 'Coda', cursive;
   margin: auto;
   text-align: center;
-  padding:10px;
   color:white;
   width:500px;
 }
@@ -210,6 +209,16 @@ thead {
   border-radius: 15px;
   font-family: 'Roboto', sans-serif;
 }
+
+.home {
+  width:700px;
+  height: 110%;
+  background-color: #95a5a6;
+  margin:auto;
+  padding:10px 50px;
+  border-radius: 15px;
+  font-family: 'Roboto', sans-serif;
+  }
 
 footer {
   background-color: #101010;
