--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -16,7 +16,7 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, class: 'field3' %>
+    <%= f.email_field :email, autofocus: true, class: 'field3', :required => true %>
   </div>
 
   <div class="field">
@@ -24,12 +24,12 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off", class: 'field3' %>
+    <%= f.password_field :password, autocomplete: "off", class: 'field3', :required => true %>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation, 'Confirmation' %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'field3' %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'field3', :required => true %>
   </div>
 
   <div class="actions">
