--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -224,6 +224,7 @@ footer {
   background-color: #101010;
   height:100%;
   padding:15px;
+  top:0;
   margin-top: 60px;
   font-size: 1.1em;
   text-align: center;
