--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -13,7 +13,7 @@
 		<%= f.submit "Modifier", data:{ disable_with: 'Modification en cours
 		...' }, style: 'font-size:16px;vertical-align:middle;margin-top:20px;'%>
 	</p>
-	<p class="bouton"> <%= link_to "Retour", mytasks_path %> </p>
+	<p class="bouton"> <%= link_to "Retour", root_path %> </p>
 
 	<% end%>
 </div>
