--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,7 +5,6 @@
 				<h1 style ='font-size:3em'>Doolt</h1>
 				<p class="lead">Découvrez doolt : une nouvelle interface vous permettant de gérer vos tâches via une to-do list épurée, simple, et efficace.</p>
 			</div>
-			<hr/ id='hr1'>
 </div>
 
 				<div class='row'>
@@ -13,7 +12,7 @@
 		        <thead>
 							<tr>
 			          <th>To-do</th>
-			          <th>Description</th>
+			          <!-- <th>Description</th> -->
 								<th>Times left</th>
 								<th></th>
               </tr>
@@ -22,8 +21,8 @@
             <tbody>
 								<% @tasks.each do |t|%>
 		          <tr>
-			          <td><%= t.task_title %></td>
-		            <td style="width:400px"><%= t.task_description %></td>
+			          <td style="width:400px"><%= t.task_title %></td>
+		            <!-- <td style="width:400px"><%= t.task_description %></td> -->
 								<td><% time = ((t.deadline.to_time - Time.now).to_i) %>
 										<% if time >= 0 %>
 											<p><%= (time/3600) / 24 %>j <%= (time/3600) % 24%>h <%= (time/60) % 60 %>m</p>
@@ -66,9 +65,8 @@
 					</div>
 		  </div>
 
+			<footer>
+				<p> Développement :<span style="color:#925446"> Mathieu Harribey</span> | Github :<span style="color:#925446"> doolt </span></p>
+				<p> &copy; 2016 Company, Inc. </p>
+			</footer>
 <br>
-
-	<footer class="footer">
-		<p style='color:#95a5a6'>Développement :<span style="color:#ecf0f1"> Mathieu Harribey</span> | Github :<span style="color:#ecf0f1"> doolt </span></p>
-		<p style='color:#95a5a6'>&copy; 2016 Company, Inc.</p>
-	</footer>
